--- a/client/index.docker.html
+++ b/client/index.docker.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/images/icon.png" />
     <title>Autodom CRM</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <div id="root"></div>
+    <script src="/js/vendors.bundle.js"></script>
+    <script src="/js/main.bundle.js"></script>
 </body>
 </html>
