--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
@@ -8,13 +8,13 @@
     <title>Autodom CRM</title>
 </head>
 <body>
-    <!--
-      THIS FILE USED ONLY FOR DEV SERVER
+<!--
+  THIS FILE USED ONLY FOR DEV SERVER
 
-      IT IS NOT PRODUCTION
-    -->
-    <div id="root"></div>
+  IT IS NOT PRODUCTION
+-->
+<div id="root"></div>
 
-    <script type="text/javascript" src="/js/main.bundle.js?v=COMMITHASH1"></script>
+<script type="text/javascript" src="/js/main.bundle.js?v=COMMITHASH1"></script>
 </body>
 </html>
