--- a/client/index.study.html
+++ b/client/index.study.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="/images/icon.png" />
-    <title>Autodom CRM</title>
+    <link rel="icon" href="/images/icon-2.png" />
+    <title>Autodom Обучение</title>
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
